# evaluation

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  env_tests  example.env  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml
core/apps/: conftest.py  constants.py  utils.py
core/apps/basic/: urls.py  utils.py
core/apps/basic/models/: common.py  orders.py  products.py  sales.py  statistics.py  warehouses.py
core/apps/basic/request_urls/: wildberries.py
core/apps/basic/sql_commands/: __init__.py  goods.py  orders.py  sales.py  statistics.py  stocks.py  warehouses.py
core/apps/basic/types/: __init__.py  from_platform.py  query_params.py  requests.py  responses.py  to_platform.py  types.py
core/apps/basic/views/: common.py  orders.py  sales.py  statistics.py  warehouses.py
core/apps/tests/: common.py  test_broker.py  test_goods.py  test_limit_requests.py  test_orders.py  test_prices_and_discounts.py  test_sales.py  test_statistics.py  test_stock.py  test_warehouses.py
core/apps/tests/test_fetcher_component/: conftest.py  response_for_fetcher.py  routes_for_fetcher_tests.py  test_fetcher.py
core/project/: constants.py  decorators.py  exceptions.py  types.py  urls.py  utils.py
core/project/conf/: __init__.py
core/project/db/: connect.py  execute_migrations.py
core/project/enums/: common.py
core/project/message_manager/: consumers.py  publisher.py
core/project/middlewares/: authentication.py
core/project/services/broker/: README.md  __init__.py  callbacks.py  rabbit.py  schemas.py  utils.py
core/project/services/database_workers/: __init__.py
core/project/services/handlers/: common.py
core/project/services/requesters/: __init__.py  fetcher.py
core/project/services/scheduler/: common.py
core/project/views/: __init__.py
core/settings/: __init__.py
core/tests/: db.py  test_server.py
core/tests/src/: exceptions.py  utils.py
core/tests/src/factories/: __init__.py
core/tests/src/routers/: __init__.py  common.py  content.py  prices_and_discounts.py  statistics.py  suppliers.py
infra/: docker-compose-prod.yml  docker-compose-stage.yml  docker-compose.yml  env_tests
(+25 files in other folders)
