[tool.poetry]
name = "microservice-wb"
version = "0.17.0"
description = ""
authors = ["Dmitry Gorokhov <gorokhov86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aio-pika = "9.3.0"
aiohttp = "3.9.3"
aiohttp-jwt = "0.6.1"
aiormq = "6.7.7"
aiosignal = "1.3.1"
annotated-types = "0.5.0"
anyio = "4.0.0"
asttokens = "2.4.0"
async-timeout = "4.0.3"
asyncio = "3.4.3"
asyncpg = "0.28.0"
attrs = "23.1.0"
automat = "22.10.0"
black = "23.9.1"
charset-normalizer = "3.2.0"
click = "8.1.7"
colorama = "0.4.6"
constantly = "23.10.4"
decorator = "5.1.1"
executing = "1.2.0"
frozenlist = "1.4.0"
greenlet = "2.0.2"
hyperlink = "21.0.0"
icecream = "2.1.3"
idna = "3.4"
incremental = "22.10.0"
iniconfig = "2.0.0"
isort = "5.12.0"
mako = "1.2.4"
markupsafe = "2.1.3"
multidict = "6.0.4"
mypy-extensions = "1.0.0"
numpy = "^1.26.1"
outcome = "1.3.0.post0"
packaging = "23.1"
pamqp = "3.2.1"
pandas = "2.1.1"
pathspec = "0.11.2"
pika = "1.3.2"
platformdirs = "3.10.0"
pluggy = "1.3.0"
pydantic = "2.3.0"
pydantic-core = "2.6.3"
pygments = "2.16.1"
pyjwt = "2.8.0"
pytest = "7.4.3"
pytest-aiohttp = "1.0.5"
pytest-asyncio = "0.21.1"
pytest-mock = "3.12.0"
pytest-tornasync = "0.6.0.post2"
pytest-trio = "0.8.0"
pytest-twisted = "1.14.0"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
pytz = "2023.3.post1"
pyyaml = "6.0.1"
six = "1.16.0"
sniffio = "1.3.0"
sortedcontainers = "2.4.0"
sqlalchemy = "2.0.21"
tornado = "6.3.3"
trio = "0.23.1"
twisted = "23.10.0"
typing-extensions = "4.9.0"
tzdata = "2023.3"
yarl = "1.9.2"
zope-interface = "6.1"
aiocache = "0.12.2"
faker = "24.7.1"
flake8 = "7.0.0"
mccabe = "0.7.0"
mirakuru = "2.5.2"
polyfactory = "2.15.0"
port-for = "0.7.2"
psutil = "5.9.8"
psycopg = "3.1.18"
pycodestyle = "2.11.1"
pyflakes = "3.2.0"
pytest-env = "1.1.3"
pytest-postgresql = "6.0.0"
redis = "5.0.4"
prometheus-async = "^22.2.0"


[tool.poetry.group.dev.dependencies]
pytest-env = "^1.1.3"
pytest-postgresql = "^6.0.0"
polyfactory = "^2.15.0"
pytest-timeout = "^2.3.1"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
